Bug 131434 - CUSTOMISE DIALOG: Icons disappear if you move commands up or down
Summary: CUSTOMISE DIALOG: Icons disappear if you move commands up or down
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.1.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0 target:6.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2020-03-20 08:43 UTC by Dieter
Modified: 2020-03-29 06:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2020-03-20 08:43:56 UTC
Steps to reproduce

1. Tools => Customise => Toolbars
2. Select a command from the right column and move it up or down

Result: Icon of command shrinks or disappears after pressing the arrow for the third time
Expected result: Icon remains visible

Found in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 5dcbd1bb557450a2d658a710c163b310c0cee157
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

and also in 

Version: 6.4.1.2 (x86)
Build-ID: 4d224e95b98b138af42a64d84056446d09082932
CPU-Threads: 8; BS: Windows 10.0 Build 14393; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

but not in

Version: 6.3.5.2 (x64)
Build-ID: dd0751754f11728f69b42ee2af66670068624673
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded
Comment 1 Muhammet Kara 2020-03-20 09:13:19 UTC
Couldn't reproduce

Version: 7.0.0.0.alpha0+
Build ID: 08f5b6d20deb4837b184de60b87643f703103829
CPU threads: 16; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-03-20 10:48:05 UTC
I can't reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 9d7fdcd6b5c7b5a9fe781bb99b135fba7d04ddec
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Dieter 2020-03-20 10:56:12 UTC
Sory, incorrect steps. Correct steps are

1. Tools => Customise => Menus
2. Select a command from the right column and move it up or down
Comment 4 Xisco Faulí 2020-03-20 11:03:28 UTC
Reproduced in menu's tab
Comment 5 Xisco Faulí 2020-03-20 11:19:02 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=05734503ed36cff64cfaac8afb7c6df5eced8873

author	Caolán McNamara <caolanm@redhat.com>	2019-11-25 14:25:28 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-11-27 00:27:42 +0100
commit 05734503ed36cff64cfaac8afb7c6df5eced8873 (patch)
tree dc6a3ed6297c4ba094c863b8c463f34da4747e39
parent 1cf1e9cc33327128f30c6781b4d8c16e20601540 (diff)
tdf#126043 use another bulk_insert_for_each

Bisected with: bibisect-linux64-6.5

Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2020-03-23 16:07:40 UTC
it seems that the assumption is that the first bitmap-alike item in an entry is an expander icon and the widths of these are set on moving an entry but in this case the first slot is empty and there's a bitmap in the second slot and the empty slot is given the width of a full slot resulting it the icons shifting right when the entry is moved
Comment 7 Commit Notification 2020-03-23 19:29:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b1de953071947e343820dc62c2a0d3b8cf68dc34

tdf#131434 ensure expander icon column is created

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2020-03-23 19:33:22 UTC
fixed in master, backport to 6-4 in gerrit
Comment 9 Commit Notification 2020-03-24 01:37:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/a3b00e6192f8185eed574aa6782fec0ee42f091f

tdf#131434 ensure expander icon column is created

It will be available in 6.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Dieter 2020-03-29 06:32:00 UTC
Verified with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 1c9ced04189c9d23ffea05d5570960b54b05ef28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: CL

Caolán, thanks for fixing it!