tdf#131434 ensure expander icon column is created

which the normal ::insert case does, but the bulk insert omitted

Change-Id: I9b236e5f0e91292539164d39f0f90e109a1b503e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90928
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>